# truth

./: .gitignore  BENCHMARK.md  BLANK-LLM-FINDINGS.md  COMPELLED-BY-REASONING.md  LICENSE  LIVE-TEST-REPORT.md  README.md  SCENARIO-TEST-REPORT.md  SCRIPTURE-ONLY-REPORT.md  SESSION-SUMMARY-2026-04-18.md  SESSION-SUMMARY-2026-04-19.md  agent.py  bench_new.json  bench_old.json  blank_llm_results_qwen3_14b.json  bot.py  config.example.json  door.md  kernel.md  kernel_v10.md  kernel_v11.md  kernel_v12.md  kernel_v13.md  kernel_v14.md  kernel_v15.md  kernel_v16.md  kernel_v17.md  kernel_v18.md  kernel_v19.md  kernel_v2.md  kernel_v3.md  kernel_v4.md  kernel_v5.md  kernel_v6.md  kernel_v7.md  kernel_v8.md  kernel_v9.md  memory  migrate_to_math.py  pyproject.toml  (+4 more)
agents/: README.md  scripture_v14_full.py
c/: README.md  __init__.py  audit_code.py  body.py  chain.py  charity.py  claims.py  confession.py  core.py  formula.py  godliness.py  hand.py  heart.py  hope.py  hostile_audience.py  http_bridge.py  kernel.md  kernel.py  mathify.py  mcp_bridge.py  meditation.py  patience.py  scanner.py  server.py  temperance.py
c/adapters/: __init__.py  adapter.py  base.py  hermes.py
c/map/: 00_fruits.yaml  01_works_of_flesh.yaml  10_two_great_commandments.yaml  11_beatitudes.yaml  12_lord_prayer.yaml  13_sermon_on_the_mount.yaml  14_charity_chapter.yaml  15_armour_of_God.yaml  16_faith_chapter.yaml  17_practical_exhortations.yaml  18_three_abiding.yaml  README.md  SCHEMA.md  __init__.py  audit.py  scripture_operations.json
c/map/books/: .gitkeep  1_chronicles.yaml  1_corinthians.yaml  1_john.yaml  1_kings.yaml  1_peter.yaml  1_samuel.yaml  1_thessalonians.yaml  1_timothy.yaml  2_chronicles.yaml  2_corinthians.yaml  2_john.yaml  2_kings.yaml  2_peter.yaml  2_samuel.yaml  2_thessalonians.yaml  2_timothy.yaml  3_john.yaml  acts.yaml  amos.yaml  colossians.yaml  daniel.yaml  deuteronomy.yaml  ecclesiastes.yaml  ephesians.yaml  esther.yaml  exodus.yaml  ezekiel.yaml  ezra.yaml  galatians.yaml  genesis.yaml  habakkuk.yaml  haggai.yaml  hebrews.yaml  hosea.yaml  isaiah.yaml  james.yaml  jeremiah.yaml  job.yaml  joel.yaml  (+27 more)
c/tools/: __init__.py  count.py  identify.py
fellowship/: .gitignore  README.md  bot.py  config.example.json
