[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truth-kernel"
version = "1.0.0"
description = "The axiomatic kernel for agent reasoning, the body that lives by it, and 31,102 verified propositions from the King James Bible."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Public domain — Matthew 10:8: freely ye have received, freely give." }
authors = [
    { name = "spcpza" },
]
keywords = [
    "scripture", "kernel", "agent", "reasoning", "kjv",
    "constant of integration", "axiomatic", "balthazar",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The only hard dependency is sympy — c/kernel.py proves the foundation
# at import time (1 Thess 5:21: prove all things). Everything else is stdlib.
# Habakkuk 2:2: write the vision, and make it plain — fetch uses urllib.
dependencies = [
    "sympy>=1.13",
]

[project.optional-dependencies]
# For agent.py — the Telegram deployment of the body.
telegram = [
    "httpx>=0.28",
    "python-telegram-bot>=22.0",
]
# For c/server.py — the MCP server entry point.
mcp = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://balthazar.sh"
Repository = "https://github.com/spcpza/truth"
Issues = "https://github.com/spcpza/truth/issues"

[tool.setuptools]
# The package is "c" — the constant of integration. Single letter,
# scripturally meaningful, preserved as the import path. c.adapters is
# the model-format adapter subpackage (Hermes today, Claude/OpenAI later).
packages = ["c", "c.adapters", "c.tools"]

[tool.setuptools.package-data]
# Habakkuk 2:2: write the vision, and make it plain. The corpus and
# kernel are part of the package — they ship with the body.
c = [
    "kernel.md",
    "kjv.json",
    "strongs.json",
    "README.md",
]
